# B-

./: .gitignore  1.md  11.md  AAA镇码大佛.md  HBS基组优化理论.md  HBS基组修正记录.md  README.md  hamiltonian_operator_mapping.md  pyproject.toml  temp_old_elements.py  tmp_check_old.py  tmp_debug.py  tmp_elements_new.py  tmp_old_elements.py  tmp_run_with_timeout.py  tmp_test_solver.py  参数调整与扩展.md
cache/assembly_chunks/chunk_run_14t65kyn/: chunk_0000_kinetic.npz  chunk_0000_mass.npz  chunk_0000_overlap.npz  chunk_0000_potential.npz  chunk_0001_kinetic.npz  chunk_0001_mass.npz  chunk_0001_overlap.npz  chunk_0001_potential.npz  chunk_0002_kinetic.npz  chunk_0002_mass.npz  chunk_0002_overlap.npz  chunk_0002_potential.npz  chunk_0003_kinetic.npz  chunk_0003_mass.npz  chunk_0003_overlap.npz  chunk_0003_potential.npz  chunk_0004_kinetic.npz  chunk_0004_mass.npz  chunk_0004_overlap.npz  chunk_0004_potential.npz  chunk_0005_kinetic.npz  chunk_0005_mass.npz  chunk_0005_overlap.npz  chunk_0005_potential.npz  chunk_0006_kinetic.npz  chunk_0006_mass.npz  chunk_0006_overlap.npz  chunk_0006_potential.npz  chunk_0007_kinetic.npz  (+179 more)
cache/energy_small/: hamiltonian.npz  kinetic.npz  mass.npz  metadata.json  overlap.npz  potential.npz  spectra.npz
cache/precision_baseline/: kinetic.npz  mass.npz  metadata.json  overlap.npz  potential.npz  spectra.npz
docs/: precision_targets.md
scripts/: plot_dynamic_polarizability.py  run_energy_pipeline.py  run_polarizability_pipeline.py  run_precision_scan.py
src/he_polarization/: __init__.py
src/he_polarization.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
(+56 files in other folders)
