[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "he-polarization"
version = "0.1.0"
description = "严格复现氦原子能级与极化率论文的数值计算流程"
authors = [
    { name = "TODO", email = "todo@example.com" }
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "scipy>=1.11",
    "matplotlib>=3.8",
    "numba>=0.58",
    "sympy>=1.12"
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
